# dmr-desktop

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.toml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
docs/issues/: plugin-settings-ui.md
sidecar/: README.md  go.mod  go.sum  main.go
src/: App.tsx  Setup.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: AGENTS.md
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  dmr.rs  main.rs  sidecar.rs  weixin_login.rs
src/components/: ApprovalOverlay.tsx  ChatInterface.tsx  FilePathDetector.tsx  Markdown.tsx  MessageInput.tsx  MessageList.tsx  StartupLoader.tsx  StartupScreen.tsx  WeixinLogin.tsx
src/components/chat/: ChatComposer.tsx  ChatHeader.tsx  MessageBubble.tsx
src/components/settings/: AgentSettings.tsx  BasicSettings.tsx  CollapsibleSection.tsx  ExtPluginsSettings.tsx  ModelsSettings.tsx  PluginsSettings.tsx  RestartDialog.tsx  SettingsPage.tsx  TapeSettings.tsx
src/hooks/: useApproval.ts  useChat.ts  useConfig.ts  useTapeChatSession.ts  useTheme.tsx
src/lib/: fileHandler.ts
src/types/: config.ts
